fix: lefthook double dash passing

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -30,7 +30,7 @@ pre-push:
   parallel: true
   commands:
     test:
-      run: pnpm test -- --run
+      run: pnpm exec vitest --run
     typecheck:
       run: pnpm exec tsc --noEmit
     svelte-check:
